app/common/styles.css
/* textarea, input, */
.ibox,
.ui-spinner,
.ui-sel {
    display: block;
    margin-left: 160px;
    margin-bottom: 10px;
    width: 600px;
}
:target {
    background-color: #ffffcc !important;
}

.input-group-field.readonly {
    padding: 5px;
    border: 1px solid #cacaca;
    height: 2.4375rem;
}
table.sticky thead tr th {
    position: sticky;
    z-index: 100;
    top: 0;
}

div.attachline {
    display: inline-block;
}

.attachline .btext {
    vertical-align: middle;
    display:inline-block;
    text-align: center;
    width:200px;
}

.attachline .qrinst {
    background: white;
    height: 400px;
    vertical-align: middle;
}

.slider-ticks {
    z-index: 2;
    background: none;
    width: 100%;
    height: 24px;
    top: -8px;
}

.login-info {
    display: block;
    float: right;
}

li.purge {
    background-color: lightpink;
}

.loginbutton {
    padding: 10px;
    cursor: pointer;
}

.login-button {
    background-color: #1779ba;
    color: white;
    border-radius: 0.625rem;
}

.bademail {
    background-color: pink !important;
    border:2px dashed red !important;
}

.qrinst {
    display: inline-block;
    height: 400px;
}
.hidden,
.qplain {
    display: none;
}
.qplain::after {
    content: 'Hidden';
}

th.asc::after {
    content: '\25b2';
    color: darkgreen;
}

th.desc::after {
    content: '\25bc';
    color: darkgreen;
}
.prev {
    display: none;
}
body.fs  {
    height: 100vh;
    overflow:hidden;
}
body.txt {
    padding: 1rem;
    font-family: Arial, Helvetica, sans-serif;
}
.ctl {
    font-weight: bold;
    font-family: Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
    background-color: #e6e6e6;
}

.printbtn {
    border-radius: 10px;
    margin: 15px 50px;
}
.quseall,
.qusea,
.quseb,
.qusebs,
.qusec,
.qusecs {
    float: right;
    display: block;
    margin-left: 10px;
    font-size: 20px;
}

.quseall::after,
.qusea::after,
.quseb::after,
.qusebs::after,
.qusec::after,
.qusecs::after {
    border-radius: 0 0 10px 10px;
    padding: 2px;
}

.divb,
.divc,
.diva,
.divall {
    display: inline;
    margin-left: 4px;
    padding: 2px;
    border-radius: 5px;
    color: black;
}

.divall,
.quseall::after {
    background-color: #90be3f;
    border: 2px solid #0a8b45;
}
.diva,
.qusea::after {
    background-color: #ffc400;
    border: 2px solid #cc9c00;
}
.divb,
.quseb::after,
.qusebs::after {
    background-color: #d30d2b;
    border: 2px solid #99091f;
}
/* Official color for Division C was #0a7eca; */
.divc,
.qusec::after,
.qusecs::after {
    background-color: #0b91ea;
    border: 2px solid #064f80;
}

.quseall::after {
    content: 'All events';
}
.qusea::after {
    content: 'Div A';
}
.quseb::after {
    content: 'Div B';
}
.qusebs::after {
    content: 'Div B State/National Only';
}
.qusec::after {
    content: 'Div C';
}
.qusecs::after {
    content: 'Div C State/National Only';
}

.usedon {
    float: left;
}
.testset {
    margin-left: 120px;
}

.usemsg {
    display: inline;
    color: red;
}
span.goodtime,span.badtime {
    font-family: 'Courier New', Courier, monospace;
    font-weight: bold;
    font-size: 32px;
    padding: 0 10px;
}

span.goodtime {
    color: darkgreen;
}

span.badtime {
    color: darkred;
}

.fq {
    font-family: 'Courier New', Courier, monospace;
    font-weight: bold;
}
.ht {
    width: 10rem;
    font-weight: bold;
    clear: both;
    float: left;
    border-top: 1px solid lightgrey;
    text-align: right;
    padding-right: 0.5rem;
}
.ex {
    margin-left: 12rem;
    margin-right: 5rem;
}
h2.ol {
    border-top: 1px solid black;
    background-color: rgb(240, 240, 240);
}
h2.ol:target {
    background-color: rgb(204, 204, 166) !important;
}

h3.ol {
    border-top: 1px solid black;
    background-color: rgb(240, 240, 240);
    padding-left: 2rem;
}
h3.ol:target {
    background-color: rgb(204, 204, 166) !important;
}

.in {
    margin-left: 10rem;
    border-top: 1px solid lightgrey;
}
.in1 {
    margin-left: 10rem;
}
div.input-group-field,
textarea.input-group-field {
    white-space: normal;
}
tbody td,
tbody th {
    padding: 0.5rem;
}

.instructions tbody th,
.instructions tbody td {
    padding: 0;
}
.instructions table,
.instructions tbody,
.instructions tbody tr,
.instructions table.unstriped tbody tr,
.question table,
.question tbody,
.question tbody tr,
.question table.unstriped tbody tr {
    border: none;
    border-color: transparent;
}
.note-editor {
    width: 100%;
}
input.cb {
    margin: auto;
    width: auto;
}

.ui-spinner {
    width: 100px;
}

.ui-spinner-input {
    width: 62px;
}
.slookup label {
    clear: none;
}

.sfind {
    clear: none;
    width: 200px;
}

.ans {
    /* width: 600px; */
    font-size: 16px;
    font-family: 'Courier New', Courier, monospace;
    margin-bottom: 24px;
    font-weight: bold;
    line-height: 200%;
}

.ans #ftext {
    line-height: 100%;
    overflow-wrap: break-word;
}

.solinfo {
    overflow-wrap: break-word;
}

.rail {
    line-height: 100%;
}
.tword td.ke {
    font-style: italic;
    font-weight: bold;
    background-color: red;
    width: 1rem;
    text-align: center;
}
.tword td.kc {
    font-style: italic;
    width: 1rem;
    text-align: center;
}
.tword td.c1,
.tword td.c2 {
    background-color: lightyellow;
    text-align: center;
}
.tword td.p1,
.tword td.p2 {
    background-color: lightblue;
    vertical-align: middle;
    text-align: center;
    height: 1.65rem;
}

#chi {
    display: block;
    margin-top: 10px;
    margin-bottom: 5px;
    font-style: italic;
}
.sword,
.sword tbody {
    float: left;
    background-color: #eaeaea;
    margin: 3px 5px;
    line-height: normal;
}
.l50,
.l0 {
    background-color: lawngreen;
}
.l100,
.l1 {
    background-color: greenyellow;
}
.l200,
.l2 {
    background-color: yellow;
}
.l500,
.l3 {
    background-color: lightpink;
}
.g500,
.l4 {
    background-color: lightcoral;
}
.nopat,
.l5 {
    background-color: red;
}
.nomatch {
    text-decoration: line-through;
}
/* ... */

